--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -5,6 +5,9 @@
     <title>My App</title>
 </head>
 <body>
+{% extends "layout.html" %}
+
+{% block content %}
 
     <h1>Welcome Home</h1>
 
@@ -24,3 +27,4 @@
 
 </body>
 </html>
+{% endblock %}
