Song Recommender + Playlist Create vFFF

--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Spotify Track Details</title>
+    <title>Spotify Song Recommenders</title>
     <style>
         body {
             font-family: Arial, sans-serif;
